Basic pdf multipage (thumbnail) rendering
Use masonry to layout pdf thumbs

Make it so masonry doesn't depends on Asset specifically

Masonry only needs width & height of each asset; move the knowledge
of Asset model from masonry into Assets component

Combine timer clearing into clearAssetsLayoutTimer,
matches the same refactor in Pdf component

--- a/src/components/Inspector/Pdf.scss
+++ b/src/components/Inspector/Pdf.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.Pdf-body {
+.Pdf-singlepage-body {
   @include flexOn;
   @include fullWidth;
   @include flexRow;
@@ -32,6 +32,25 @@
     // center horizontally
     margin-left: auto;
     margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
+.Pdf-multipage-scroll {
+  @include flexOn;
+  @include fullWidth;
+  @include flexRow;
+  @include flexJustifyCenter;
+  overflow-y: auto;
+}
+
+.Pdf-multipage-body {
+  position: relative;
+
+  canvas {
+    position: absolute;
+    top:0;
     left: 0;
     right: 0;
   }
