--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -128,3 +128,26 @@
   }
 
 }
+
+.MultipageToggle {
+  @include flexRowCenter;
+
+  background-color: #fff;
+  margin: 10px;
+
+  color: #000;
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  cursor: pointer;
+  &:hover { background-color: $zorroa-lightgray; }
+
+  &.MultipageToggle-enabled {
+    color: #fff;
+    background-color: $zorroa-sickly-green;
+    &:hover { background-color: darken($zorroa-sickly-green, 15%); }
+  }
+}
