Thumb refactored for multipage stacks.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -143,6 +143,9 @@
   outline: none;
   font-size: 20px;
   cursor: pointer;
+
+  transform: scaleX(-1);
+
   &:hover { background-color: $zorroa-lightgray; }
 
   &.MultipageToggle-enabled {
