--- a/src/components/Assets/AssetCounter.scss
+++ b/src/components/Assets/AssetCounter.scss
@@ -23,4 +23,20 @@
       @media screen and (max-width: 1300px) { content: ''; }
     }
   }
+
+  .asset-counter-collapsed {
+    font-size: 12px;
+    margin-left: 8px;
+    font-family: "Roboto Condensed";
+    color: $zorroa-lightgray;
+
+    &:hover {
+      color: $zorroa-sickly-green;
+    }
+
+    &:after {
+      content: ' COLLAPSED';
+      @media screen and (max-width: 1300px) { content: ''; }
+    }
+  }
 }
