Remove Pdf multipage rendering. Share Inspector.onMultipage.

--- a/src/components/Inspector/Video.scss
+++ b/src/components/Inspector/Video.scss
@@ -234,6 +234,13 @@
       margin-left: 0;
     }
   }
+
+  .Video-multipage {
+    &:hover {
+      cursor: pointer;
+      color: $zorroa-sickly-green;
+    }
+  }
 }
 
 .Video-volume {
