--- a/src/components/Inspector/Multipage.scss
+++ b/src/components/Inspector/Multipage.scss
@@ -7,3 +7,37 @@
   max-height:100%;
   @include flexCol;
 }
+
+.Multipage-document-switch {
+  @include flexRow;
+  font-size: 12px;
+  font-family: "Roboto Condensed";
+}
+
+.Multipage-document-mode {
+  border: 1px solid $zorroa-gray;
+  color: $zorroa-gray;
+  padding: 4px 8px;
+
+  &.left {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+
+  &.right {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
+
+  &.selected {
+    background: white;
+    color: $zorroa-darkgray;
+    border: none;
+  }
+
+  &:not(.selected):hover {
+    background-color: $zorroa-gray;
+    color: $zorroa-darkgray;
+    cursor: pointer;
+  }
+}
