Fix up badging icons and paging text. (#325)
* Add enable / disable toggle to Widgets

Skip disabled widgets in search
Add grayscale+opacity filter to disabled widgets
Customize SimpleSearch header due to duplicate colors

* Add FileIcon badges to Thumb.

* Badge logic with Duration and FileIcon.

* Use <count> of <total> in multipage thumb labels.

* Fix pageCount and reduce badging clutter.

* Tweak badging CSS and handle small icons.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -66,6 +66,15 @@
   }
 }
 
+.Assets-page-label {
+  @include nowrap;
+  @include flexRow;
+  font-family: "Roboto Condensed";
+  background-color: rgba(256, 256, 256, 0.75);
+  padding-right: 4px;
+  padding-left: 4px;
+}
+
 .assets-footer {
   padding-left: 8px;
   padding-right: 8px;
