--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -10,64 +10,6 @@
   @include fullHeight;
 }
 
-.Thumb-time-badge {
-  position: absolute;
-  right: 4px;
-  bottom: 4px;
-  color: $zorroa-greyish-brown;
-  background: none;
-
-  @include flexRow;
-  @include flexAlignItemsCenter;
-
-}
-
-.Thumb-duration {
-  padding: 2px;
-  line-height: 2em;
-  height: 28px;
-  background-color: rgba(256,256,256, 0.75);
-
-  &.small {
-    height: 14px;
-    font-size: 10px;
-    line-height: 1.25em;
-  }
-}
-
-.Thumb-play-badge {
-  padding: 4px;
-  margin: 1px;
-  background-color: rgba(256,256,256, 0.75);
-  width: 28px;
-  height: 28px;
-
-  &.small {
-    width: 14PX;
-    height: 14px;
-  }
-
-  @include flexRow;
-  @include flexAlignItemsCenter;
-  @include flexJustifyCenter;
-
-  @media (max-width: 56px) { visibility: hidden }
-}
-
-.Thumb-arrow-right {
-  width: 0;
-  height: 0;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 12px solid $zorroa-greyish-brown;
-
-  &.small {
-    border-top: 4px solid transparent;
-    border-bottom: 4px solid transparent;
-    border-left: 6px solid $zorroa-greyish-brown;
-  }
-}
-
 .Thumb-selection {
   @include fullWidth;
   @include fullHeight;
@@ -117,7 +59,7 @@
   }
 }
 
-.Thumb-multipage-badge {
+.Thumb-badges {
   position: absolute;
   right: 4px;
   bottom: 4px;
@@ -126,32 +68,19 @@
   @include flexAlignItemsCenter;
   @media screen and (max-width: 56px) { hidden: true; }
 
-  .icon {
-    width: 30px;
-    height: 30px;
-
-    &.small {
-      width: 15px;
-      height: 15px;
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
+  .Thumb-icon {
+    @include flexRow;
   }
 }
 
 .Thumb-pages {
   color: $zorroa-greyish-brown;
-  background-color: rgba(256, 256, 256, 0.75);
-  padding: 2px;
   line-height: 2em;
-  height: 28px;
+  height: 25px;
 
-  &.small {
+  .small & {
     font-size: 10px;
-    height: 16px;
+    height: 15px;
     line-height: 1.5em;
   }
 }
