--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -51,7 +51,7 @@
 
   .DropdownMenu-item {
     line-height: 1.5;
-    padding: 8px;
+    & > * { padding: 8px; }
     width: 100%;
     height: 100%;
     text-transform: uppercase;
