Add support form for customers to send questions/feedback

--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -113,6 +113,7 @@ $zorroa-Sidebar-width : 340px;
   width: $width;
   height: $height;
   cursor: pointer;
+  border: none;
   border-radius: 3px;
   background-color: $bgColor;
   &:hover {
