--- a/src/components/Racetrack/WidgetHeader.scss
+++ b/src/components/Racetrack/WidgetHeader.scss
@@ -33,6 +33,9 @@
 
   background-color: transparent;
   &:hover { background-color: rgba(0,0,0,0.2); }
+  .hoverField & {
+    background-color: rgba(255,255,255,0.5);
+  }
 }
 
 .WidgetHeader-toggle {
