Do not badge 1-page documents. Add inset parent background to handle missing case.

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -116,6 +116,7 @@
   bottom: 0;
   width: 30%;
   height: 30%;
+  background-color: $zorroa-nearwhite;
   border: 2px solid $zorroa-lightgray;
 }
 
