Add Get Link and Add to Collection Lightbar actions (#342)
* Lightbar get link and folder dropdown checkpoint.

* Add to folder actions for mono and multipage Lightbox

* Update shrinkwrap file to fix fsevents Linux error

* de-lint

* Filter out folders without permissions to add assets. Rename drop Folder functions.

* Refactor Editbar to be more reusable.

* Remove thumb FileType badges. Change Lightbox download to download source directly rather than export.

--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -109,8 +109,15 @@
   border: none;
   background: none;
   outline: none;
-  &:hover  { color: $zorroa-sickly-green; }
-  &:active { color: chartreuse; }
+  position: relative;
+  text-decoration: none;
+
+  &:active:not(.isDisabled) { color: chartreuse; }
+  &.isDisabled { color: $zorroa-gray;  }
+  &:hover:not(.isDisabled)  {
+    color: $zorroa-sickly-green;
+    cursor: pointer;
+  }
 }
 
 .Lightbar-action-text {
@@ -170,4 +177,35 @@
 
   &:hover { background-color: $zorroa-darkgray; }
   &.isDragging { background-color: $zorroa-darkgray; }
+}
+
+.Lightbar-folders {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 400px;
+  min-height: 300px;
+  max-height: 70vh;
+  overflow: auto;
+  border-radius: 3px;
+  box-shadow: 0 0 30px 0 black;
+  margin-top: 20px;
+  z-index: 1000;
+  background-color: $zorroa-nearwhite;
+
+  &:hover { color: $zorroa-darkgray; }
+  &:active { color: $zorroa-darkgray; }
+}
+
+.Lightbar-performed-action {
+  @include nowrap;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  box-shadow: 0 0 30px 0 black;
+  padding: 12px;
+  margin-top: 20px;
+  z-index: 1000;
+  background-color: black;
+  color: $zorroa-nearwhite;
 }
