Raise the Lightbox z-index so z-indexed elements behind it don't shine through.
Specifically done for the "imports" animated gif element.

--- a/src/components/Lightbox/Lightbox.scss
+++ b/src/components/Lightbox/Lightbox.scss
@@ -9,6 +9,10 @@
   top:0;
   height: 100vh;
   width: 100vw;
+
+  // z-index was added to prevent the "imports" animated gif (z-index:1) in Assets|header
+  // from appearing above the lightbox.
+  z-index: 10;
 }
 
 .lightbox-body {
