--- a/src/components/Racetrack/WidgetHeader.scss
+++ b/src/components/Racetrack/WidgetHeader.scss
@@ -79,3 +79,50 @@
   min-width: 16px;
   max-width: 16px;
 }
+
+.WidgetHeader-header {
+  @include flexRow;
+  @include flexJustifySpaceBetween;
+  @include flexAlignItemsCenter;
+  @include fullWidth;
+  @include noSelect;
+
+  flex-shrink: 1;
+  //min-width: 0;
+}
+
+.WidgetHeader-header-label {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  width: 100%;  // needed for WidgetHeader-header-field ellipsis
+  //min-width: 0;
+}
+
+.WidgetHeader-header-title {
+  //@include flexOff;
+  font-weight: 100;
+  margin-right: 4px;
+}
+
+.WidgetHeader-header-field {
+  font-weight: 400;
+  width: 100%;
+  min-width: 77%;
+  max-width: 0; // This looks weird, but is important! It allows cells to chop content
+  @include clampText;
+  @include flexOn;
+
+  //@include flexShrinkOnly;
+  //@include clampText;
+  //min-width: 0;
+  //text-transform: uppercase;
+  //text-overflow: ellipsis;
+  //font-weight: 400;
+}
+
+.WidgetHeader-settings {
+  @include zorroa-square-btn-darken(40px);
+  //margin: 5px 0px;
+
+  &:hover { cursor: pointer; }
+}
