--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -118,5 +118,11 @@
 
 .Folders-deselect-all {
   font-size: 10px;
-  margin-left: 4px;
+  margin-left: 2px;
+  border-radius: 3px;
+  @include zorroa-square-btn(20px);
+  &:hover {
+    background-color: $zorroa-nearwhite;
+    color: $zorroa-sickly-green;
+  }
 }
