--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -58,6 +58,41 @@
   }
 }
 
+.Workspace-reloader {
+  @include flexOff;
+  @include flexRowCenter;
+  @include flexJustifySpaceBetween;
+  width: 100%;
+  height: 64px;
+
+  background-color: $zorroa-orangish;
+  color: #fff;
+  padding-left: 10px;
+}
+
+.Workspace-reloader-reload {
+  @include flexRowCenter;
+  height: 30px;
+
+  background-color: $zorroa-sickly-green;
+  &:hover { background-color: darken($zorroa-sickly-green, 15%); }
+  border: 2px solid white;
+  border-radius: 3px;
+  margin-left: 20px;
+  color: #fff;
+  font-size: 14px;
+}
+
+.Workspace-reloader-close {
+  @include flexRowCenter;
+  @include zorroa-darken;
+  width: 64px;
+  height: 64px;
+
+  font-size: 24px;
+  color: #fff;
+}
+
 // Footers use flex-basis to toggle between open and close
 .footer {
   flex: 0 0 20px;
