--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -11,25 +11,6 @@
   overflow: hidden;
 }
 
-.Table-settings {
-  @include flexRowCenter;
-
-  // settings button is always visible, top right corner
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  // width,height are defined in JSX
-
-  color: $zorroa-lightgray;
-  background-color: #fff;
-  border-radius: 2px;
-
-  &:hover {
-    color: $zorroa-hover;
-  }
-}
-
 // this is to allow resizing of the rightmost column
 $tableResizeRightPadding: 20px;
 
@@ -45,7 +26,6 @@ $tableResizeRightPadding: 20px;
 
   .Table-cell {
     text-align: left;
-    text-transform: uppercase;
     font-size: 12px;
     font-family: Roboto Condensed;
   }
@@ -57,6 +37,10 @@ $tableResizeRightPadding: 20px;
 
   &.ordered {
     background-color: $zorroa-selected;
+  }
+
+  &.hovered {
+    background-color: $zorroa-nearwhite;
   }
 }
 
@@ -179,4 +163,29 @@ $tableResizeRightPadding: 20px;
 #Table-cell-test {
   position: absolute;
   top: -50px;
+}
+
+.Table-title {
+  @include flexRowCenter;
+}
+
+.Table-title-head {
+  @include noSelect;
+  @include nowrap;
+  @include clampText;
+  text-align: left;
+  //text-transform: uppercase;
+  font-size: 12px;
+  font-family: Roboto Condensed;
+  color: $zorroa-gray;
+}
+
+.Table-title-tail {
+  @include noSelect;
+  @include clampText;
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: Roboto Condensed;
+  color: $zorroa-lightgray;
 }
