--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?ryuz29');
-  src:  url('fonts/zorroa-icons.eot?ryuz29#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?ryuz29') format('woff2'),
-    url('fonts/zorroa-icons.ttf?ryuz29') format('truetype'),
-    url('fonts/zorroa-icons.woff?ryuz29') format('woff'),
-    url('fonts/zorroa-icons.svg?ryuz29#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?g499bm');
+  src:  url('fonts/zorroa-icons.eot?g499bm#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?g499bm') format('woff2'),
+    url('fonts/zorroa-icons.ttf?g499bm') format('truetype'),
+    url('fonts/zorroa-icons.woff?g499bm') format('woff'),
+    url('fonts/zorroa-icons.svg?g499bm#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -43,11 +43,20 @@
 .icon-settings_backup_restore:before {
   content: "\e92f";
 }
+.icon-square-minus:before {
+  content: "\e969";
+}
+.icon-square-plus:before {
+  content: "\e968";
+}
 .icon-search2:before {
   content: "\e962";
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-star-filled:before {
+  content: "\e96a";
 }
 .icon-singleasset:before {
   content: "\e966";
